--- a/index.html
+++ b/index.html
@@ -1,52 +1,58 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <head>
+        <meta charset='utf-8'>
+        <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+        <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+        <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
+        <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <title>Demo by rayliao</title>
-  </head>
-
-  <body>
+        <title>Demo by rayliao</title>
+    </head>
+    <body>
 
     <header>
-      <div class="container">
-        <h1>Demo</h1>
-        <h2>my demo</h2>
+        <div class="container">
+            <h1>Demo</h1>
+            <h2>my demo</h2>
 
-        <section id="downloads">
-          <a href="https://github.com/rayliao/demo/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/rayliao/demo/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/rayliao/demo" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
+            <section id="downloads">
+                <a href="https://github.com/rayliao/demo/zipball/master" class="btn">Download as .zip</a>
+                <a href="https://github.com/rayliao/demo/tarball/master" class="btn">Download as .tar.gz</a>
+                <a href="https://github.com/rayliao/demo" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+            </section>
+        </div>
     </header>
 
     <div class="container">
-      <section id="main_content">
-        <h3>
-<a id="简介" class="anchor" href="#%E7%AE%80%E4%BB%8B" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>简介</h3>
-
-<p>这个我的demo，用来存放自己平时学习开发过程中的demo，会比较常改动。</p>
-
-<p>人生在于折腾。</p>
-      </section>
+        <section id="main_content">
+            <h3><a id="简介" class="anchor" href="#%E7%AE%80%E4%BB%8B" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>简介</h3>
+            <p>这个我的demo，用来存放自己平时学习开发过程中的demo，会比较常改动。</p>
+            <p>人生在于折腾。</p>
+        </section>
+        <!-- JiaThis Button BEGIN -->
+        <div class="jiathis_style">
+            <span class="jiathis_txt">分享到：</span>
+            <a class="jiathis_button_weixin">微信</a>
+            <a class="jiathis_button_tsina">新浪微博</a>
+            <a class="jiathis_button_douban">豆瓣</a>
+            <a href="http://www.jiathis.com/share" class="jiathis jiathis_txt jiathis_separator jtico jtico_jiathis" target="_blank">更多</a>
+        </div>
+        <script type="text/javascript" src="http://v3.jiathis.com/code_mini/jia.js" charset="utf-8"></script>
+        <!-- JiaThis Button END -->
     </div>
 
-              <script type="text/javascript">
-            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-          </script>
-          <script type="text/javascript">
-            try {
-              var pageTracker = _gat._getTracker("UA-73134610-1");
+    <script type="text/javascript">
+        var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+        document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+    </script>
+    <script type="text/javascript">
+        try {
+            var pageTracker = _gat._getTracker("UA-73134610-1");
             pageTracker._trackPageview();
-            } catch(err) {}
-          </script>
+        } catch(err) {}
+    </script>
 
-  </body>
+    </body>
 </html>
