--- a/react/index.html
+++ b/react/index.html
@@ -13,12 +13,6 @@
 			<p>Created by <a href="http://github.com/petehunt/">petehunt</a></p>
 			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 		</footer>
-
-		<script src="node_modules/react/dist/react-with-addons.js"></script>
-
-		<!-- jsx is an optional syntactic sugar that transforms methods in React's
-		`render` into an HTML-looking format. Since the two models above are
-		unrelated to React, we didn't need those transforms. -->
-		<script type="text/jsx" src="js/app.jsx"></script>
+		<script src="bundle.js"></script>
 	</body>
 </html>
